# mt2019

lab2/: CMakeLists.txt  all_tests.cpp  grammar.txt  lexer.cpp  parser.cpp  parser_main.cpp  sample.dot
lab2/include/: lexer.h  parser.h
mt4/: CDecl.g4  CMakeLists.txt  Calculator.gr  GrammarScheme.g4  formatting.cpp  generate_lexer_cpp.cpp  generate_lexer_h.cpp  generate_parser_cpp.cpp  generate_parser_h.cpp  lexer_sample.cpp  lexer_sample.h  main.cpp
mt4/calculator/: CMakeLists.txt  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  pw.h
mt4/cdecls/: CMakeLists.txt  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
mt4/include/: common.h  formatting.h  generate_lexer_cpp.h  generate_lexer_h.h  generate_parser_cpp.h  generate_parser_h.h  generator_context.h
